typescript
Script started on Sat 27 Sep 2014 01:15:53 PM EDT
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ python script.py
  File "script.py", line 4
    print 'I love UPhony"
                        ^
SyntaxError: EOL while scanning string literal
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /media/EDF9-DB72/install
]0;(precise)joydisee@localhost: /media/EDF9-DB72/install(precise)joydisee@localhost:/media/EDF9-DB72/install$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joydisee/uPhony/uPhony
]0;(precise)joydisee@localhost: ~/uPhony/uPhony(precise)joydisee@localhost:~/uPhony/uPhony$ cd /home/joyd